# Learn-To-Code

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  myprogram
include/: colors.h  game.h  helpers.h  lessons.h  menu.h  terminal.h  terminalEnv.h
src/: main.cpp
src/game/: game.cpp
src/resources/: colors.cpp  helpers.cpp  sections.cpp  terminalEnvs.cpp
src/states/: game.cpp  menu.cpp  terminal.cpp
